# runtime_custom_op

./: README.md
fma_multi_domain/: CMakeLists.txt  README.md  fma_multi_domain.cpp  test_fma.py
fma_multi_with_cuda/: CMakeLists.txt  README.md  cuda_kernel.cu  cuda_kernel.cuh  demo_fma.py  fma_multi_domain.cpp
fma_multi_with_cuda/docker/: Dockerfile
fma_pure_python/: README.md  test_fma.py
fma_use_t/: CMakeLists.txt  README.md  fma_use_t.cpp  test_fma.py
